--- a/precios.html
+++ b/precios.html
@@ -195,7 +195,7 @@
         window.location.href = "index.html"; 
     } else {
         // Muestra el contenido principal de la aplicación
-        document.getElementById('main-content').classList.remove('hidden');
+        document.getElementById('antialiased').classList.remove('hidden');
     }
         // Variables de estado
         let allProducts = [];
